--- a/web-SPA/package.json
+++ b/web-SPA/package.json
@@ -2,12 +2,19 @@
   "name": "cnode",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.tsx",
   "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,12 +23,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "^4.6.2"
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "browserslist": {
     "production": [
